# print-collect

./: PrintCollectAgent.spec  README.md  __init__.py  __main__.py  build-setup.bat  build-setup.ps1  collector.py  config.py  sender.py  snmp.py  windows
.github/workflows/: - - build-windows-agent.yml  blank.yml
agent/: config.example.yaml  pyproject.toml
agent/print_collect/: __main__.py
agent/windows/: PrintCollectAgent.spec  PrintCollectSetup.iss  build-setup.ps1  open-config.bat  test-agent.bat  unregister-startup-task.bat
runtime/: open-config.bat  register-startup-task.bat  run-once.bat  test-agent.bat  unregister-startup-task.bat
